# invoice-generator

./: .gitignore  Cargo.toml  flake.nix
migrations/2025-12-05-234832-0000_init/: down.sql  up.sql
src/: lib.rs  main.rs
src/cli/: args.rs  generate.rs  log.rs
src/csv/: convert.rs
src/orm/: model.rs  query.rs  schema.rs  ticket.rs
src/typst/: convert.rs  mod.rs  world.rs
