[package]
name = "invoice-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
typst = "0.14.1"
comemo = "0.4"
zune-inflate = { version = "0.2", default-features = false, features = [
  "gzip",
  "std",
] }
tar = "0.4"
ureq = "2.9"
time = "0.3"
ttf-parser = "0.25"
typst-kit = { version = "0.14.1", features = ["embed-fonts"] }
typst-pdf = "0.14.1"
